# server/src/repositories/user.ts
@@ -2,20 +2,41 @@ import {getRepository} from "typeorm";
 import {User} from "../models/user"
 import * as bcrypt from 'bcryptjs'
 
-export interface IUserPayload{
+export interface IUserPayload {
     email: string;
     name: string;
     surname: string;
     password: string;
 }
 
-export const createUser = async (payload: IUserPayload): Promise<User> => {
-    const userRepository = getRepository(User);
-    const user = new User()
-    payload.password = await bcrypt.hash(payload.password, 8)
+export interface ILoginPayload {
+    email: string;
+    password: string;
+}
 
-    return userRepository.save({
-        ...user,
-        ...payload
-    })
+export const loginUser = async (payload: ILoginPayload): Promise<any> => {
+    const userRepository = getRepository(User)
+    const user = await userRepository.findOne({email: payload.email})
+    if (!user) return null
+    const passwordMatching = await bcrypt.compare(payload.password, user.password)
+    if (passwordMatching) {
+        return user
+    } else {
+        return {message: "password is incorrect"}
+    }
+}
+
+export const createUser = async (payload: IUserPayload): Promise<User> => {
+    try {
+        const userRepository = getRepository(User);
+        const user = new User()
+        payload.password = await bcrypt.hash(payload.password, 8)
+
+        return userRepository.save({
+            ...user,
+            ...payload
+        })
+    } catch (err) {
+        return err
+    }
 }
